--- a/tex/Calculus/Homogeneity.tex
+++ b/tex/Calculus/Homogeneity.tex
@@ -227,6 +227,22 @@
 				Let ${ f(x_1,\dots,x_n) = A\x = C }$ be a constant-valued implicit function representing a linear homogeneous equation over a field $\F{}$. Using \autoref{prop:linear-homogeneous-equation-has-no-constant-term}, we know that ${ C = 0 }$ and using \autoref{coro:linear-map-homogeneous-degree-1-and-preserves-origin} we have that ${ A\0 = \0 }$. It follows then, that $\0$ is a solution to the equation.
 			\end{proof}
 		\end{tcolorbox}
+	
+		\bigskip
+		\begin{tcolorbox}[breakable,enhanced jigsaw,colframe=white,colback=white,boxrule=0pt,arc=0pt,left=0pt,right=0pt,top=0pt,bottom=0pt]
+			\labeledProposition{A linear equation that is also homogeneous has solutions that form a linear space.}{linear-homogeneous-equation-solutions-form-lin-space}
+			\begin{proof}
+				\TODO{todo}
+			\end{proof}
+		\end{tcolorbox}
+	
+		\bigskip
+		\begin{tcolorbox}[breakable,enhanced jigsaw,colframe=white,colback=white,boxrule=0pt,arc=0pt,left=0pt,right=0pt,top=0pt,bottom=0pt]
+			\labeledProposition{A linear equation that is non-homogeneous has solutions that form an affine space.}{linear-non-homogeneous-equation-solutions-form-affine-space}
+			\begin{proof}
+				\TODO{todo}
+			\end{proof}
+		\end{tcolorbox}
 		
 		
 		\biggerskip
@@ -241,7 +257,9 @@
 		\]
 		which is equivalent to the matrix equation,
 		\[ A \x = \0. \]
-		It further follows that such systems, and matrix equations, always have the trivial solution ${ \x = \0 }$.
+		It further follows that such systems, and matrix equations, always have the trivial solution ${ \x = \0 }$.\\
+		
+		In fact, solutions to homogeneous systems form a linear space whereas solutions to non-homogeneous systems form an affine space.
 		
 		
 		
